# clarity

./: .clarity.json.example  .gitignore  Cargo.toml  EXAMPLES.md  README.md  flake.nix  justfile  test_orchestration.md
crates/assistant/: Cargo.toml  flake.nix
crates/assistant/assets/: style.css
crates/assistant/src/: main.rs
crates/boostrap/: Cargo.toml  calculator.lua
crates/boostrap/src/: main.rs
crates/cvm/: Cargo.toml  README.md
crates/cvm/doc/: design.md
crates/cvm/src/: lib.rs
crates/cvm/src/core/: mod.rs  types.rs
crates/cvm/src/signer/: mod.rs
crates/cvm/src/transport/: client.rs  server.rs
crates/imagent/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/imagent/src/: error.rs  flux_stub.rs  lib.rs  stable_diffusion.rs
crates/imagent/src/flux_wip/: mod.rs  model.rs  sampling.rs
crates/mcp/: CONFIG.md  Cargo.toml  config.toml
crates/mcp/agents/: gardener.toml  math-tutor.toml  rust-expert.toml
crates/mcp/src/: config.rs  lib.rs  ollama.rs
crates/mcp/src/core/: constants.rs  error.rs  mod.rs  types.rs
crates/mcp/src/encryption/: mod.rs
crates/mcp/src/gateway/: mod.rs
crates/mcp/src/proxy/: mod.rs
crates/mcp/src/relay/: mod.rs
crates/mcp/src/transport/: client.rs  mod.rs  server.rs
crates/ollama/: Cargo.toml  README.md
crates/ollama/examples/: embeddings.rs  model_management.rs  orchestration.rs  streaming_chat.rs  vision.rs
crates/ollama/src/: client.rs  lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/orchestration/: mod.rs  types.rs
crates/orchestrator/src/orchestration/experts/: artist.rs  scribe.rs
crates/termcp/doc/: TerminalContextProtocol.md
doc/: ASSISTANT_DESIGN.md  ORCHESTRATION_ARCHITECTURE.md  tools.md
examples/: generate.rs  model_management.rs  orchestration.rs  streaming_chat.rs  structured_output.rs  tool_calling.rs
src/: lib.rs
src/orchestration/: orchestrator.rs  translator.rs  types.rs
src/orchestration/experts/: agent.rs  analyst.rs  mod.rs  producer.rs
