[package]
name = "clarity"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
base64 = "0.22"
termimad = "0.30"
crossterm = "0.28"
notify = "7.0"
notify-debouncer-full = "0.4"
glob-match = "0.2"
dirs = "5.0"
chrono = "0.4"
thiserror = "2.0"
async-trait = "0.1"
