[package]
name = "cvm"
version = "0.1.0"
edition = "2024"

[lib]
name = "cvm"
path = "src/lib.rs"

[[bin]]
name = "cvm"
path = "src/bin/cvm.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
async-trait = "0.1"

# Nostr dependencies
nostr-sdk = "0.43"
