[package]
name = "cvm"
version = "0.1.0"
edition = "2021"

[lib]
name = "cvm"
path = "src/lib.rs"

[[bin]]
name = "cvm"
path = "src/bin/cvm.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2.0"
async-trait = "0.1"

# Nostr SDK with NIP-59 (Gift Wrap) support
nostr-sdk = { version = "0.43", features = ["nip59"] }

# Logging
tracing = "0.1"
