[package]
name = "ollama"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
termimad = "0.30"
crossterm = "0.28"

# For orchestration example
orchestrator = { path = "../orchestrator" }
